--- a/index.css
+++ b/index.css
@@ -168,3 +168,11 @@ body {
     background: yellow;
     grid-area: footer;
 }
+
+.btn {
+    text-decoration: none;
+    border: 1px solid blue;
+    padding: 10px;
+    color: blue;
+    border-radius: 1000px;
+}
